--- a/references.bib
+++ b/references.bib
@@ -1935,6 +1935,15 @@
   publisher	= {Springer}
 }
 
+@misc{ggplot2025,
+	title = {{ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics}},
+	author = {{ggplot2 Developer Team}},
+	year = {2025},
+	month = mar,
+	note = {[Online; accessed 18. Mar. 2025]},
+	url = {https://ggplot2.tidyverse.org/index.html}
+}
+
 @Book{		  lawvere2009,
   title		= {Conceptual mathematics: a first introduction to
 		  categories},
